--- a/QuickApp_iOS/Podfile
+++ b/QuickApp_iOS/Podfile
@@ -6,7 +6,7 @@ target 'QuickApp_iOS' do
   use_frameworks!
 
   # Pods for QuickApp_iOS
-    pod 'GoogleWebRTC', '1.1.29229'
+    pod 'EnxRTCiOS', '1.5.3'
     pod 'Socket.IO-Client-Swift', '~> 15.0.0'
     pod 'SVProgressHUD'
     pod 'ReachabilitySwift'
